tests/rustdoc-ui/infinite-recursive-type-impl-trait.rs
fn f() -> impl Sized {
    enum E { //~ ERROR
        V(E),
    }
    unimplemented!()
}
